Fix nav-tabs border bottom when wrapped to allow left|right tabs scroll

--- a/Resources/public/less/bootstrapp/bootstrap-commons.less
+++ b/Resources/public/less/bootstrapp/bootstrap-commons.less
@@ -91,6 +91,7 @@
     .flex(1, 1, auto);
     overflow: hidden;
     white-space: nowrap;
+    border-bottom: none;
 
     > li {
       float:none;
